# neural-network

./: .gitignore  Cargo.toml
src/: main.rs
src/matrix/: matrix.rs
src/matrix/matrix/: matrix_clone.rs  matrix_operators.rs  matrix_test.rs
src/neural_network/: layer.rs  mod.rs  network.rs  neural_layer.rs  neuron.rs
src/neural_network/layer/: layer_config.rs  layer_test.rs
src/neural_network/network/: config.rs  network_config.rs  network_test.rs
src/neural_network/neural_layer/: neural_layer_test.rs
src/neural_network/neuron/: neuron_test.rs
src/neuron_service/: neuron.rs
src/neuron_service/neuron/: neuron_test.rs
