[package]
name = "neural-network"
version = "0.1.0"
authors = ["kaczor6418 <k.kaczynski97@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "^0.7.3"
csv = "^1.1.5"
serde = { version = "1", features = ["derive"] }
